--- a/LineControl/Views/Shared/_Layout.cshtml
+++ b/LineControl/Views/Shared/_Layout.cshtml
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - LineControl</title>
-    <link rel="stylesheet" href="~/lib/font-awesome/css/all.min.css" type="text/css" asp-append-version="true">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="~/lib/sb-admin/css/sb-admin-2.min.css" asp-append-version="true">
      <link rel="stylesheet" href="~/css/feedback.kendo.css" asp-append-version="true" />
      <link rel="stylesheet" href="~/lib/kendo/css/Kendo.Schaeffler.css" asp-append-version="true" />
@@ -96,7 +96,7 @@
                           <ul class="navbar-nav">
                             <li class="nav-item dropdown">
                               <button class="btn dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-                                Company Location
+                                Location/Information
                               </button>
                               <ul class="dropdown-menu">
                                   <li class="nav-item px-xl-3 py-xl-2">
